
[build-system]
requires = ["setuptools>=61.2.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DyGyS"
version = "0.0.1"
description = "DyGyS is a package for Maximum Entropy regression models with gravity specification for undirected and directed network data.
                Moreover, it can solve them, generate the graph ensemble, compute several network statistics, calculate model selection measures such as AIC and BIC 
                and quantify their reproduction accuracy in topological and weighted properties."

readme = "README.md"
authors = [{ name = "Marzio Di Vece", email = "marzio.divece@imtlucca.it" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = ["maximum entropy methods", "econometrics", "regression", "graph","network"]
dependencies = [
    "numpy = 1.21.5",
    "numba = 0.55.1",
    "numba-scipy = 0.3.1"; python_version = "3.9"',
]
requires-python = ">=3.9"

    [project.optional-dependencies]
    dev = ["pytest"]

    [project.urls]
    Homepage = "https://github.com/MarsMDK/DyGyS"


[tool.setuptools]
py-modules = ["DyGyS"]


    
