
[build-system]
requires = ["setuptools>=61.2.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DyGyS"
version = "0.0.3"
description = "DyGyS is a package for Maximum Entropy regression models with gravity specification for undirected and directed network data. Moreover, it can solve them, generate the graph ensemble, compute several network statistics, calculate model selection measures such as AIC and BIC and quantify their reproduction accuracy in topological and weighted properties."
readme = "README.md"
license = {file = "GNU General Public License v3"}
authors = [{ name = "Marzio Di Vece", email = "marzio.divece@imtlucca.it" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = ["maximum entropy methods", "econometrics", "regression", "graph","network"]
dependencies = [
    "numpy >= 1.21.5",
    "numba >= 0.55.1",
    "numba-scipy >= 0.3.1",
    'tomli; python_version >= "3.8"',
]
requires-python = ">=3.8"

    [project.optional-dependencies]
    dev = ["pytest"]

    [project.urls]
    Homepage = "https://github.com/MarsMDK/DyGyS"    
    
    

[tool.setuptools]
py-modules = ["DyGyS"]

